Hide email on mobile view to avoid overlapping with susi logo

--- a/src/components/StaticAppBar/StaticAppBar.css
+++ b/src/components/StaticAppBar/StaticAppBar.css
@@ -48,3 +48,8 @@ header {
         margin: 0 auto;
     }
 }
+@media only screen and (max-width: 516px){
+    .useremail{
+        display: none;
+    }
+}
